@@ -2,6 +2,7 @@ Revision history for perl distribution LinkEmbedder
 
 1.01 Not Released
  - Forgot to remove Carp::Always
+ - Add support for https://bitbucket.org
 
 1.00 2018-09-26T01:22:18+0900
  - Compatible with Mojolicious 8.00
